# rust-movie-ingester

./: .gitignore  Cargo.toml
src/: data.rs  main.rs  parsing.rs  query.rs
src/data/: tests.rs
src/parsing/: tests.rs
src/query/: by_production_companies.rs  query_test.rs
