[package]
name = "moviedb"
version = "0.1.0"
edition = "2021"
serde = { version = "1.0", features = ["derive"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"csv" = "1.2.2"
"chrono" = { version = "0.4.26", features = ["serde"] }
"serde" = { version = "1.0.164", features = ["derive"] }
"json" = "0.12.4"
"itertools" = "0.11.0"
kstring = "2.0.0"
